# CHANGELOG


- 0.6
    - better prompts
    - map coloring
- 0.5
    - back to initial idea: plan moves ahead
    - two game modes: input commands, watch as game execute commands
- 0.4
    - hiding cursor
    - quit command
    - help message
- 0.3
    - faster clear screen (just redrawn from 0,0)
- 0.2
    - realtime keyboard readings
- 0.1
    - map renderer
    - player class
    - enemy class
    - random ai
    - gui implementation